fix alignment on table

--- a/styles.css
+++ b/styles.css
@@ -133,8 +133,13 @@ table tr {
   border-bottom: 1px solid var(--stone-150);
 }
 
+table th {
+  text-align: start;
+  padding: 10px 0 10px 25px;
+}
+
 table tr td {
-  padding: 10px;
+  padding: 10px 0 10px 20px;
 }
 
 .attribution {
